<resources>
    <string name="app_name">AR-driving-assistant</string>
    <string name="app_title">Welcome to the AR-driving-assistant helper tool!</string>

    <string name="monitoring_start">Start Monitoring</string>
    <string name="monitoring_stop">Stop Monitoring</string>
    <string name="monitoring_empty">No results yet</string>

    <string name="setup_user">Setup</string>
    <string name="export_db">Export Database</string>
    <string name="calibrate_button">Calibrate Sensors</string>
    <string name="calibrate_acceleration_error">The accelerometer sensor is not calibrated\nAccelerometer monitoring has been disabled</string>

    <string name="setup_dialog_id_placeholder">ID</string>
    <string name="setup_dialog_ip_placeholder">HoloLens IP Address</string>
    <string name="setup_dialog_dismiss">Close</string>
    <string name="setup_dialog_ok">Save</string>

    <string name="database_insert_success"> Insert Success</string>
    <string name="database_insert_failure"> Insert Failure</string>
    <string name="database_insert_empty_data"> No data to insert</string>
    <string name="database_rewrite_success"> Rewrite Success</string>
    <string name="database_rewrite_failure"> Rewrite Failure</string>
    <string name="database_rewrite_empty_data"> No data to rewrite</string>

    <string name="export_task_message">Exporting&#8230;</string>
    <string name="export_task_success">Database Export Successful</string>
    <string name="export_task_failure">Database Export Failure</string>
    <string name="export_task_close">Close</string>

    <string name="calibrate_task_message">Please set the device on a flat surface</string>
    <string name="calibrate_task_title">Calibrating&#8230;</string>
    <string name="calibrate_task_success">Calibration Successful</string>
    <string name="calibrate_task_failure">Error during calibration. Please try again</string>
    <string name="calibrate_task_close">Close</string>

    <string name="send_event_task_button">Send event manually</string>
    <string name="send_event_task_success">Event sent successfully</string>
    <string name="send_event_task_failure">Failed to send event</string>
    <string name="send_event_task_invalid_ip">Invalid IP Address</string>
    <string name="send_event_task_text_placeholder">Text To Display</string>
    <string name="send_event_dialog_ok">Send</string>
    <string name="send_event_dialog_dismiss">Close</string>

    <string name="training_button_start">Start Training</string>
    <string name="training_button_stop">Stop Training</string>
    <string name="training_task_success">Inserting event to database</string>
    <string name="training_task_no_data">Error inserting event : no data from sensor found</string>
    <string name="training_task_no_sensor">Error inserting event : no sensor specified</string>
    <string name="training_task_label_exists">Error inserting event : the label already exists</string>
    <string name="training_task_hint_label">Label</string>
    <string name="training_task_hint_message">Message</string>
    <string name="training_task_dialog_ok">Start</string>
    <string name="training_task_dialog_dismiss">Cancel</string>

    <string name="match_event_task_status">Event status : </string>
    <string name="match_event_task_match_found">Match found : </string>

    <string name="setup_dtw_button">DTW</string>
    <string name="setup_dtw_accel_label">Acceleration Distance Cutoff</string>
    <string name="setup_dtw_rotation_label">Rotation Distance Cutoff</string>
    <string name="setup_dtw_speed_label">Speed Distance Cutoff</string>

    <string name="delete_events_button">Manage Events</string>
    <string name="list_events_dialog_title">Training Events</string>
    <string name="list_events_dialog_dismiss">Close</string>
    <string name="list_events_inner_dialog_title">Delete %1$s?</string>
    <string name="list_events_delete_button">Delete</string>
    <string name="list_events_delete_all_button">Delete all events</string>
    <string name="list_events_empty">No events found</string>
</resources>
